RenderLayerCompositor doesn't properly clip graphics layer sizes https://bugs.webkit.org/show_bug.cgi?id=80372

Reviewed by Simon Fraser.

Source/WebCore:

To find the bounds for a composited layer, calculateCompositedBounds
iterates through all non-composited child layers using z-order and
normal flow lists. This does not preserve clipping from ancestor
layers, because a clipping ancestor layer can end up as a sibling to
its clipped descendent because it is not a stacking context.

Fix by explicitly checking cached clip roots.

Test: compositing/clip-child-by-non-stacking-ancestor.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::localClipRect):
(WebCore):
* rendering/RenderLayer.h:
(RenderLayer):
* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::repaintOnCompositingChange):
(WebCore::RenderLayerCompositor::calculateCompositedBounds):

LayoutTests:

Update several baselines due to smaller backing sizes.

* compositing/clip-child-by-non-stacking-ancestor-expected.txt: Added.
* compositing/clip-child-by-non-stacking-ancestor.html: Added.
* compositing/geometry/clip-expected.txt:
* compositing/images/clip-on-directly-composited-image-expected.txt:
* compositing/overflow/clip-descendents-expected.txt:
* platform/chromium-win/compositing/images/clip-on-directly-composited-image-expected.txt: Removed.
* platform/chromium-win/compositing/overflow/clip-descendents-expected.txt:

Canonical link: https://commits.webkit.org/98967@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111456 268f45cc-cd09-0410-ab3c-d52691b4dbfc